[package]
name = "compiler"
version = "0.1.0"
author = ["User: asd123www, Mail: wangzezhou@pku.edu.cn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
# koopa = "0.0.5"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }